# INFORMATICS_MIMUW

./: .gitignore
III_semester/C++_programming_course/Problem_1/: medals  medals.cpp
III_semester/C++_programming_course/Problem_2/: Makefile  README.md  strqueue.cpp  strqueue.h
III_semester/C++_programming_course/Problem_7/: Makefile  funclist.h  funclist_test_1.cpp  program
III_semester/Concurrent_programming/Laboratory_10/: CMakeLists.txt  atomic-volatile.c  dekker.c  lockfree-stack.c  mutual-excl.c
III_semester/Concurrent_programming/Laboratory_11/: gifts.c  send_message.c  send_message_no_inheritance.c  unnamed_memory.c
III_semester/Concurrent_programming/Laboratory_12/: terminator.c
III_semester/Concurrent_programming/Laboratory_13/: Makefile  inc_thread_test.c  inc_thread_test_naive  inc_thread_xchg.asm
III_semester/Concurrent_programming/Laboratory_14/: CMakeLists.txt  async.c  create.c  mq-farm.c  priorities.c  send-receive.c
III_semester/Concurrent_programming/Laboratory_7/: CMakeLists.txt  line.c
III_semester/Concurrent_programming/Laboratory_8/: CMakeLists.txt  pipeline.c
III_semester/Concurrent_programming/Theory_training/: Drukarki_teoria.cpp  Dzielony_I_wylaczny_dostep.cpp  MOKO.cpp  koszykówka.cpp  wagi.cpp  wycieczki.cpp
III_semester/Databases/First_assignment/: .commands_to_problem.sql.swp  README.md  commands_to_problem.sql  csv_to_sql.py
III_semester/Databases/Second_assignment/: autorstwo_out.txt  (+7 more)
II_semester/PO/: .WD_java.md.swp
II_semestr/PO/: README.md
IV_semester/WUM/: 4. Statistical learning - student version.ipynb
(+802 files in other folders)
